fix(Grid): Do not start-align Breakout Cells

--- a/packages/css/src/components/grid/_mixins.scss
+++ b/packages/css/src/components/grid/_mixins.scss
@@ -8,7 +8,6 @@
 @use "../../common/breakpoint" as *;
 
 @mixin ams-grid {
-  align-items: start;
   column-gap: var(--ams-grid-column-gap);
   display: grid;
   grid-template-columns: repeat(var(--ams-grid-column-count), 1fr);
